2017-04-04

        * Version 1.3.0 released
        =========================

        Added FITS image conversion operators (#1986)
        If code originates from Git, always compile the Python bindings (#1985)
        Raise exception instead of exiting with return code in Python tests (#1983)
        Enhance precision of GCTAEdisp2D::compute_ebounds_src
        Add conversion methods between GEbounds and GEnergies (#1977)
        Add GModelSpectralSmoothBrokenPlaw class (#1948)
        Implement lazy loading of energy dispersion in GCTAEdisp2D (#1940)
        Add GCTARoi::contains method
        Do no longer interpret a CTA calibration database as file path (#1969)
        Add GCTAResponseIrf::rspname() method
        GWcs now supports CD keywords instead of CDELT (#1951)
        Correct GCTAPsf2D containment radius computation (#1876)
        Add GLS and SFL WCS projections (#1851)
        GModelSpectralNodes throws exception for non-positive energy or intensity (#990)


2017-02-24

        * Version 1.2.0 released
        =========================

        Reduce length of LAT response filenames by unzipping a number of energy dispersion files (#1931)
        Skip zero livetime observations in stacked cubes for CTA (#1920)
        Correct handling of time references in GGti::extend() method (#1922)
        Check that MC energy is comprised in validity range for CTA 3D background template (#1918)
        Add GModelTemporalPhaseCurve class (#1916)
        Monte Carlo for empty maps or map cubes no longer throws an exception (#1915)
        Add GModelTemporalLightCurve class (#1914)
        Add GSkyMap FITS HDU constructor
        Add leap second for 1-1-2017 (#1887)
        Add region() method to GModelSpatial (#1764)
        Correct containment radius computation in GCTAPsf2D::containment_radius (#1876)
        Add composite spatial and spectral models (#1706)
        Add GObservations::save_covmat() method (#1863)